2009-08-21  Marian Buchta  <marian.buchta@gmail.com>

	* cmake/FindSpark.cmake:
	- add search path when using 32bit library in 64bit Windows

2009-08-13  Hedayat Vatankhah  <hedayat@grad.com>

	* CMakeLists.txt: 
	- add common include directories
	
	* gendot/CMakeLists.txt: 
	* monitorspark/CMakeLists.txt: 
	* sampleagent/CMakeLists.txt: 
	* samplesim/CMakeLists.txt: 
	- remove duplicate include directories 

2009-08-07  Marian Buchta  <marian.buchta@gmail.com>

	* CMakeLists.txt
	- try to find and copy all thirdparty dlls in the binary package's bin/ directory. 

	* cmake/FindSpark.cmake
	- Update script from rcssserver3d\cmake\FindSpark.cmake
	
	* sampleagent/CMakeLists.txt
	- add RCSSNET3D_LIBRARIES and NET_LIBS - fixed linking error in VS2008